@@ -18,6 +18,7 @@ NEWS:
 NEW: [features/improvements]
 +Add option for enable/disable regex search in quick find bar
 +Automatically expire status bar info messages after 10 seconds
++Persist 5 most recent search locations between sessions
 
 BUG FIXES:
 +Fix case where encoding can be None in when initializing the preference dialog
